[package]
name = "biscuit-auth-python"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "biscuit_auth"
crate-type = ["cdylib", "rlib"]

[dependencies]
# FIXME add anyhow to features
pyo3 = { version = "0.16.5", features = ["extension-module", "auto-initialize"] }
biscuit-auth = { version = "2.2.0" }