[package]
name = "biscuit-auth-python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "biscuit_auth"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.58"
pyo3 = { version = "0.16.5", features = ["extension-module", "anyhow"] }
biscuit-auth = { version = "2.2.0" }
ouroboros = "0.15.0"