[build-system]
requires = ["maturin==0.12.19"]
build-backend = "maturin"

[project]
name = "biscuit-auth-python"
requires-python = ">=3.7" # Minimum version of PyO3 0.16.*
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
